# race-plotter

./: README.md
c/: main.c
c/display/: monitor.sh  run.sh
c/display/lib/Fonts/: font18.c
c/examples/: EPD_3in7_test.c
c/gnss/: CMakeLists.txt
c/gnss/hello_world/: CMakeLists.txt  hello_usb.c
c/gnss/lwrb/src/lwrb/: CMakeLists.txt
c/lib/Fonts/: font200.c  fonts.h
c/speed/: CMakeLists.txt
c/speed/app/: CMakeLists.txt  speed.c
c/speed/ink/: CMakeLists.txt
c/speed/ink/lib/Fonts/: font189.c
c/speed/lwgps/src/lwgps/: CMakeLists.txt
font/: font131.c  font210.c
py/: l76_config.py  l76x.py  main.py
